switch from inc to corporation

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1></h1>
     </div>
     <div class="footer">
-      <p>&copy; 2021 Paywake Inc.</p>
+      <p>&copy; 2021 Paywake Corporation</p>
       <a href="mailto:hello@paywake.net">Contact</a>
       <a href="mailto:press@paywake.net">Press</a>
       <a href="mailto:legal@paywake.net">Legal</a>
