--- a/dashboard.html
+++ b/dashboard.html
@@ -62,6 +62,7 @@
     <script src="js/auth/logged-in-only.js"></script>
     <script src="js/auth/auth.js"></script>
     <script src="js/auth/routines.js"></script>
+    <script src="js/api.js"></script>
     <script src="js/preload/dashboard.js"></script>
     <link rel="preload" as="image" href="https://paywake.net/assets/images/sun-192.png" media="(max-width: 192px)">
 
