adding more metrics

--- a/dashboard.html
+++ b/dashboard.html
@@ -132,13 +132,93 @@
         </div>
         <br>
         <h1>Financial</h1>
-        <p>Coming soon.</p>
+        <div class="metric">
+          <p>Revenue</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-revenueToday">$----.--</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-revenueYesterday">$---.--</p>
+            </div>
+            <div>
+              <p>Total</p>
+              <p id="__METRIC-totalRevenue">$---.--</p>
+            </div>
+          </div>
+        </div>
+        <div class="metric">
+          <p>Profit</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-profitToday">$-----.--</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-profitYesterday">$---.--</p>
+            </div>
+            <div>
+              <p>Total</p>
+              <p id="__METRIC-totalProfit">$---.--</p>
+            </div>
+          </div>
+        </div>
         <br>
         <h1>User Base</h1>
-        <p>Coming soon.</p>
-        <br>
-        <h1>Balances</h1>
-        <p>Coming soon.</p>
+        <div class="metric">
+          <p>Daily Active Users</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-activeUsersToday">---</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-activeUsersYesterday">---</p>
+            </div>
+            <div>
+              <p>Total</p>
+              <p id="__METRIC-activeUsers">----</p>
+            </div>
+          </div>
+        </div>
+        <div class="metric">
+          <p>Feedback</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-feedbackToday">--.--%</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-feedbackYesterday">--.--%</p>
+            </div>
+            <div>
+              <p>Total</p>
+              <p id="__METRIC-feedbackAll">--.--%</p>
+            </div>
+          </div>
+        </div>
+        <div class="metric">
+          <p>Balances</p>
+          <div>
+            <div>
+              <p>Oustanding</p>
+              <p id="__METRIC-outstandingBalances">--.--%</p>
+            </div>
+            <div>
+              <p>Average</p>
+              <p id="__METRIC-averageOutstandingBalance">--.--%</p>
+            </div>
+            <div>
+              <p>Max</p>
+              <p id="__METRIC-maxBalance">--.--%</p>
+            </div>
+          </div>
+        </div>
         <br>
         <h1>Account</h1>
         <p id="account-name"><b><span class="__full-name-fill"></span></b><span>,&nbsp;</span><span class="__title-fill"></span></p>
