temp fix on reload button

--- a/dashboard.html
+++ b/dashboard.html
@@ -79,8 +79,8 @@
       </a>
       <div class="between">
         <p id="name-and-title"><b><span class="__full-name-fill"></span></b><span>,&nbsp;</span><span class="__title-fill"></span></p>
-        <button class="gradient" onclick="reloadMetrics()" id="refresh-big">Refresh Data</button>
-        <button class="gradient" onclick="reloadMetrics()" id="refresh-small">Refresh</button>
+        <button class="gradient refresh-button" onclick="reloadMetrics()" id="refresh-big">Refresh Data</button>
+        <button class="gradient refresh-button" onclick="reloadMetrics()" id="refresh-small">Refresh</button>
       </div>
     </div>
     <div class="content">
