--- a/dashboard.html
+++ b/dashboard.html
@@ -180,7 +180,7 @@
               <p id="__METRIC-activeUsersYesterday">---</p>
             </div>
             <div>
-              <p>Total</p>
+              <p>All Time</p>
               <p id="__METRIC-activeUsers">----</p>
             </div>
           </div>
@@ -197,7 +197,7 @@
               <p id="__METRIC-feedbackYesterday">--.--%</p>
             </div>
             <div>
-              <p>Total</p>
+              <p>All Time</p>
               <p id="__METRIC-feedbackAll">--.--%</p>
             </div>
           </div>
