--- a/dashboard.html
+++ b/dashboard.html
@@ -99,7 +99,7 @@
               <p id="__METRIC-wakeupDepositsYesterday">$----.--</p>
             </div>
             <div>
-              <p>Total</p>
+              <p>All Time</p>
               <p id="__METRIC-totalWakeupDeposits">$----.--</p>
             </div>
           </div>
@@ -144,7 +144,7 @@
               <p id="__METRIC-revenueYesterday">$---.--</p>
             </div>
             <div>
-              <p>Total</p>
+              <p>All Time</p>
               <p id="__METRIC-totalRevenue">$---.--</p>
             </div>
           </div>
@@ -161,7 +161,7 @@
               <p id="__METRIC-profitYesterday">$---.--</p>
             </div>
             <div>
-              <p>Total</p>
+              <p>All Time</p>
               <p id="__METRIC-totalProfit">$---.--</p>
             </div>
           </div>
