--- a/dashboard.html
+++ b/dashboard.html
@@ -92,15 +92,19 @@
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-wakeupDepositsToday">$------.--</p>
+              <p id="__METRIC-wakeupDepositsToday">$----.--</p>
             </div>
             <div>
               <p>Yesterday</p>
               <p id="__METRIC-wakeupDepositsYesterday">$----.--</p>
             </div>
             <div>
+              <p>Tomorrow</p>
+              <p id="__METRIC-wakeupDepositsTomorrow">$----.--</p>
+            </div>
+            <div>
               <p>All Time</p>
-              <p id="__METRIC-totalWakeupDeposits">$----.--</p>
+              <p id="__METRIC-totalWakeupDeposits">$------.--</p>
             </div>
           </div>
         </div>
@@ -109,11 +113,15 @@
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-meanDepositToday">$------.--</p>
+              <p id="__METRIC-meanDepositToday">$----.--</p>
             </div>
             <div>
               <p>Yesterday</p>
               <p id="__METRIC-meanDepositYesterday">$----.--</p>
+            </div>
+            <div>
+              <p>All Time</p>
+              <p id="__METRIC-meanDepositAllTime">$----.--</p>
             </div>
           </div>
         </div>
@@ -122,11 +130,15 @@
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-wufrToday">$------.--</p>
+              <p id="__METRIC-wufrToday">$-.--</p>
             </div>
             <div>
               <p>Yesterday</p>
-              <p id="__METRIC-wufrYesterday">$----.--</p>
+              <p id="__METRIC-wufrYesterday">$-.--</p>
+            </div>
+            <div>
+              <p>All Time</p>
+              <p id="__METRIC-wufrAllTime">$-.--</p>
             </div>
           </div>
         </div>
@@ -137,7 +149,7 @@
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-revenueToday">$----.--</p>
+              <p id="__METRIC-revenueToday">$---.--</p>
             </div>
             <div>
               <p>Yesterday</p>
@@ -145,7 +157,7 @@
             </div>
             <div>
               <p>All Time</p>
-              <p id="__METRIC-totalRevenue">$---.--</p>
+              <p id="__METRIC-totalRevenue">$-----.--</p>
             </div>
           </div>
         </div>
@@ -154,7 +166,7 @@
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-profitToday">$-----.--</p>
+              <p id="__METRIC-profitToday">$---.--</p>
             </div>
             <div>
               <p>Yesterday</p>
@@ -162,7 +174,7 @@
             </div>
             <div>
               <p>All Time</p>
-              <p id="__METRIC-totalProfit">$---.--</p>
+              <p id="__METRIC-totalProfit">$----.--</p>
             </div>
           </div>
         </div>
