adding returns metrics

--- a/dashboard.html
+++ b/dashboard.html
@@ -126,19 +126,36 @@
           </div>
         </div>
         <div class="metric">
+          <p>Return Rate</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-returnsToday">-.--%</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-returnsYesterday">-.--%</p>
+            </div>
+            <div>
+              <p>All Time</p>
+              <p id="__METRIC-returnsAllTime">-.--%</p>
+            </div>
+          </div>
+        </div>
+        <div class="metric">
           <p>Wakeup Failure Rate</p>
           <div>
             <div>
               <p>Today</p>
-              <p id="__METRIC-wufrToday">$-.--</p>
+              <p id="__METRIC-wufrToday">-.--%</p>
             </div>
             <div>
               <p>Yesterday</p>
-              <p id="__METRIC-wufrYesterday">$-.--</p>
+              <p id="__METRIC-wufrYesterday">-.--%</p>
             </div>
             <div>
               <p>All Time</p>
-              <p id="__METRIC-wufrAllTime">$-.--</p>
+              <p id="__METRIC-wufrAllTime">-.--%</p>
             </div>
           </div>
         </div>
