adding 30d revenue/profit

--- a/dashboard.html
+++ b/dashboard.html
@@ -173,6 +173,10 @@
               <p id="__METRIC-revenueYesterday">$---.--</p>
             </div>
             <div>
+              <p>30 Day</p>
+              <p id="__METRIC-monthRevenue">$-----.--</p>
+            </div>
+            <div>
               <p>All Time</p>
               <p id="__METRIC-totalRevenue">$-----.--</p>
             </div>
@@ -188,6 +192,10 @@
             <div>
               <p>Yesterday</p>
               <p id="__METRIC-profitYesterday">$---.--</p>
+            </div>
+            <div>
+              <p>30 Day</p>
+              <p id="__METRIC-monthProfit">$----.--</p>
             </div>
             <div>
               <p>All Time</p>
