adding projections to metrics

--- a/dashboard.html
+++ b/dashboard.html
@@ -203,6 +203,19 @@
             </div>
           </div>
         </div>
+        <div class="metric">
+          <p>Projections</p>
+          <div>
+            <div>
+              <p>Yearly Revenue</p>
+              <p id="__METRIC-yearlyRevenue">$------.--</p>
+            </div>
+            <div>
+              <p>Yearly Profit</p>
+              <p id="__METRIC-yearlyProfit">$-----.--</p>
+            </div>
+          </div>
+        </div>
         <br>
         <h1>User Base</h1>
         <div class="metric">
