--- a/dashboard.html
+++ b/dashboard.html
@@ -204,14 +204,14 @@
           </div>
         </div>
         <div class="metric">
-          <p>Projections</p>
+          <p>Yearly Projections</p>
           <div>
             <div>
-              <p>Yearly Revenue</p>
+              <p>Revenue</p>
               <p id="__METRIC-yearlyRevenue">$------.--</p>
             </div>
             <div>
-              <p>Yearly Profit</p>
+              <p>Profit</p>
               <p id="__METRIC-yearlyProfit">$-----.--</p>
             </div>
           </div>
