adding profit / dau metric

--- a/dashboard.html
+++ b/dashboard.html
@@ -204,6 +204,23 @@
           </div>
         </div>
         <div class="metric">
+          <p>Profit / DAU</p>
+          <div>
+            <div>
+              <p>Today</p>
+              <p id="__METRIC-profitPerDAUToday">$-.--</p>
+            </div>
+            <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-profitPerDAUYesterday">$-.--</p>
+            </div>
+            <div>
+              <p>All Time</p>
+              <p id="__METRIC-profitPerDAUAllTime">$-.--</p>
+            </div>
+          </div>
+        </div>
+        <div class="metric">
           <p>Yearly Projections</p>
           <div>
             <div>
