adding mean deposit tomorrow and DAUs tomorrow

--- a/dashboard.html
+++ b/dashboard.html
@@ -121,6 +121,10 @@
               <p id="__METRIC-meanDepositYesterday">$----.--</p>
             </div>
             <div>
+              <p>Yesterday</p>
+              <p id="__METRIC-meanDepositTomorrow">$----.--</p>
+            </div>
+            <div>
               <p>All Time</p>
               <p id="__METRIC-meanDepositAllTime">$----.--</p>
             </div>
@@ -246,6 +250,10 @@
             <div>
               <p>Yesterday</p>
               <p id="__METRIC-activeUsersYesterday">---</p>
+            </div>
+            <div>
+              <p>Tomorrow</p>
+              <p id="__METRIC-activeUsersTomorrow">---</p>
             </div>
             <div>
               <p>All Time</p>
