--- a/dashboard.html
+++ b/dashboard.html
@@ -121,7 +121,7 @@
               <p id="__METRIC-meanDepositYesterday">$----.--</p>
             </div>
             <div>
-              <p>Yesterday</p>
+              <p>Tomorrow</p>
               <p id="__METRIC-meanDepositTomorrow">$----.--</p>
             </div>
             <div>
