adding user visualization

--- a/dashboard.html
+++ b/dashboard.html
@@ -296,6 +296,9 @@
           </div>
         </div>
         <br>
+        <h1>User Visualization</h1>
+        <div id="visualization-container"></div>
+        <br>
         <h1>Account</h1>
         <p id="account-name"><b><span class="__full-name-fill"></span></b><span>,&nbsp;</span><span class="__title-fill"></span></p>
         <br>
