adding visualization description

--- a/dashboard.html
+++ b/dashboard.html
@@ -297,6 +297,7 @@
         </div>
         <br>
         <h1>User Visualization</h1>
+        <p id="visualization-description">Viewing --- users, --/-- to present</p>
         <div id="visualization-container"></div>
         <br>
         <h1>Account</h1>
